# cross_teammate

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  uniffi.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/models/: mod.rs  payments.rs  users.rs
core/src/traits/: mod.rs  users.rs
core/tests/: teammate_test.rs
mate_core/: Cargo.toml
mate_core/src/impls/: teammate.rs  users.rs
mate_core/src/models/: payments.rs  users.rs
mate_core/tests/: teammate_test.rs  users_test.rs
sdk/js/: test_sdk.js
sdk/python/: pyproject.toml  test_sdk.py
src/: lib.rs  models.rs  teammate.udl
src/impls/: expenses.rs  members.rs  mod.rs  users.rs
src/models/: custom_ulid.rs  expenses.rs  members.rs  mod.rs  teammate.rs  ulid.rs  users.rs
src/traits/: members.rs  to_json.rs  users.rs
test/: test_generated_bindings.rs
tests/: teammate_test.rs  test_generated_bindings.rs
tests/bindings/: test_custom_types.py  test_custom_types.swift
uni/: Cargo.toml  build.rs  pyproject.toml  uniffi.toml
uni/src/: lib.rs  teammate.udl
uni/src/models/: custom_ulid.rs  custom_url.rs  expense.rs  mod.rs  payment.rs  teammate.rs  user.rs
uni/tests/bindings/: test_custom_types.kts
uni_core/: Cargo.toml  README.md  build.rs  pyproject.toml  teammate.udl  uniffi.toml
uni_core/src/: lib.rs
uni_core/src/models/: custom_url.rs  expense.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
