[package]
name = "mate_core"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
ulid = { version = "1.2.1", features = ["serde"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
async-trait = "0.1.89"
uniffi = { version = "0.31.0" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }


[build-dependencies]

[lib]
crate-type = ["rlib", "cdylib"]
name = "mate_core"
