[package]
name = "uni_core"
version = "0.1.0"
edition = "2024"

[dependencies]
mate_core = { path = "../mate_core" }
uniffi = { version = "0.29.0", features = ["cli", "bindgen-tests"] }
ulid = { version = "1.2.1", features = ["serde"]}
#derive_builder = "0.20.0"
#serde = { version = "1.0.218", features = ["derive"] }
#serde_json = "1.0.140"
#anyhow = "1.0.97"
#async-trait = "0.1.87"
#url = { version = "2.2", features = ["serde"] }


[dev-dependencies]
#tokio = { version = "1", features = ["full"] }


[build-dependencies]
uniffi = { version = "0.29.0", features = ["cli", "build"] }
camino = "1.1.9"
#serde = { version = "1.0.218", features = ["derive"] }
#serde_json = "1.0.140"

[lib]
crate-type = ["rlib", "cdylib"]
name = "uni_core"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
