[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for Teammate expense splitter"
license = "MIT"
repository = "https://github.com/example/cross_teammate"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.3.4", features = ["wasm_js"] } # The "wasm_js" backend requires the `wasm_js` feature for `getrandom`. For more information see: https://docs.rs/getrandom/0.3.4/#webassembly-support

mate_core = { path = "../mate_core" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
